Fixed various rendering and layout bugs for whattrumpsaid

--- a/src/styles/donaldtrump.css
+++ b/src/styles/donaldtrump.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Fugaz+One');
 
+body.donaldtrump{
+    height: 100vh;
+    overflow: hidden;
+}
+
 body.donaldtrump .top-navbox{
     left: 0;
     right: 0;
@@ -14,6 +19,10 @@ body.donaldtrump .top-navbox.scroll_hidden{
 
 .navbox-static.donaldtrump{
     justify-content: center;
+}
+
+.top-navbox.visible .navbox-static.donaldtrump {
+    justify-content: flex-start;
 }
 
 .navbox-static.donaldtrump .navbox-logo{
@@ -76,18 +85,29 @@ body.donaldtrump .minion-datapopup{
 
 body.donaldtrump .minion-datapopup.visible{
     overflow: scroll;
+    -webkit-overflow-scrolling: touch;
     width: auto;
-    padding: 10vh 60px;
+    padding: 10vh 100px;
     height: 80vh;
-    background: #292929;
+    background: #fff;
+    z-index: 1;
 }
 
 body.donaldtrump .minion-datapopup .datapopup-close-action{
+    display: none;
+}
+
+body.donaldtrump .minion-datapopup.visible .datapopup-close-action{
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
     width: 17px;
     height: 15px;
-    padding: 20px;
+    padding: 20px 20px 20px 30px;
     margin-top: 20px;
-    margin-left: -20px;
+    background: #fff;
+    box-shadow: 0 0 3px rgba(0,0,0,0.5);
 }
 
 body.donaldtrump .minion-datapopup .datapopup-close-action .icon{
@@ -103,6 +123,11 @@ body.donaldtrump .minion-datapopup .datapopup-close-action .icon{
     width: 100vw;
     height: 100vh;
     overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+}
+
+.presidenttrump-analysis-data.hidden{
+    height: 0vh;
 }
 
 .presidenttrump-analysis-data-dynamicbg, .presidenttrump-analysis-data-dynamicbg > div{
@@ -226,9 +251,10 @@ body.donaldtrump .minion-datapopup .datapopup-close-action .icon{
     font-weight: 600;
     font-family: 'Fugaz One', cursive;
     text-transform: uppercase;
-    margin-top: 45px;
+    margin-top: 35px;
     transform: rotate(-5deg);
     padding: 6px 20px;
+    line-height: 1.3em;
     align-self: baseline;
 }
 
@@ -265,7 +291,7 @@ body.donaldtrump .minion-datapopup .datapopup-close-action .icon{
 }
 
 .analysis-eomtxt{
-    padding: 60px 30px;
+    padding: 50px 30px;
     text-align: right;
 }
 
@@ -275,10 +301,9 @@ body.donaldtrump .minion-datapopup .datapopup-close-action .icon{
 }
 
 .analysis-hero .analysis-herotpdetails{
-    font-size: 0.8em;
     padding-top: 8px;
     padding-bottom: 8px;
-    color: #929292;
+    color: #f1f1f1;
 }
 
 .presidenttrump-analysis-data .analysis-list{
@@ -379,7 +404,7 @@ body.donaldtrump .minion-datapopup .item-tweets .tweet-item{
     margin-bottom: 10px;
     padding: 8px 0;
     flex-shrink: 0;
-    color: #fff;
+    color: #000;
 }
 
 body.donaldtrump .minion-datapopup .item-tweets .tweet-item .ts{
@@ -401,11 +426,12 @@ body.donaldtrump .minion-datapopup .item-tweets .tweet-item .ts{
 }
 
 .presidenttrump-tpdetails.revealed{
-    overflow: auto;
+    overflow: scroll;
     width: auto;
     padding: 120px 10%;
-    height: auto;
+    height: calc(100vh - 240px);
     background: #fff;
+    z-index: 1;
 }
 
 .presidenttrump-tpdetails .tpdetails-reveal > p{
@@ -445,11 +471,20 @@ body.donaldtrump .minion-datapopup .item-tweets .tweet-item .ts{
 }
 
 .presidenttrump-tpdetails .tpdetails-close-action{
+    display: none;
+}
+
+.presidenttrump-tpdetails.revealed .tpdetails-close-action{
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 17px;
     height: 15px;
-    padding: 20px;
+    padding: 20px 20px 20px 30px;
     margin-top: 20px;
-    margin-left: -20px;
+    background: #fff;
+    box-shadow: 0 0 3px rgba(0,0,0,0.5);
 }
 
 .presidenttrump-tpdetails .tpdetails-close-action .icon{
@@ -560,6 +595,7 @@ body.donaldtrump .minion-datapopup .item-tweets .tweet-item .ts{
     }
 
     body.donaldtrump .minion-datapopup.visible{
-        padding: 10vh 30px;
+        padding: 15vh 30px;
+        height: 70vh;
     }
 }
